solved image stretching

--- a/styles.css
+++ b/styles.css
@@ -959,6 +959,7 @@ footer {
 
 .article-pfp {
     max-width: 30px;
+    max-height: 30px;
     border-radius: 50%;
     margin-right: 0.6em;
 }
